Handle put operations for component and not attribnute (#52)
